<resources>
    <string name="app_name">Bey-Bake!</string>
    <string name="title_activity_recipe_summary">RecipeSummaryActivity</string>
    <string name="recipe_ingredient">%s Ingredients</string>
    <string name="step_numerator">STEP\u0020</string>

    <string name="title_activity_recipe_detail_step">RecipeDetailStepActivity</string>
    <string name="step_count">STEP %d OF %d</string>
    <string name="step_summary_card">STEP %d</string>
    <string name="no_previous_step">No previous step for this recipe</string>
    <string name="no_next_step">This is the last step for this recipe</string>
    <string name="intro_step">INTRODUCTION</string>
    <string name="intro_fetching_data">Fetching Data</string>

    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>

    <string name="servings_label_intro_card">Servings: %d</string>
    <string name="ingredients_label_intro_card">Ingredients: %d</string>
    <!-- ExoPlayer placeholder -->
    <string name="video_placeholder_no_video">NO VIDEO FOR THIS STEP</string>
    <string name="video_placeholder_no_connection">NO NETWORK TO SHOW THE VIDEO STEP</string>

    <!-- Ingredients measures -->
    <string name="cups">Cups: %s</string>
    <string name="table_spoons">Table spoons: %s</string>
    <string name="tea_spoon">Tea spoons: %s</string>
    <string name="kilograms">Kilograms: %s</string>
    <string name="grams">Grams: %s</string>
    <string name="ounce">Ounces: %s</string>
    <string name="unit">Units: %s</string>
    <string  name="default_measure">: %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="color_chooser_text">Choose Widget Color</string>
    <string name="add_widget">Add widget</string>

    <!-- widget -->
    <string name="ingredients_number">Ingredients: %d</string>
    <string name="title_activity_baking_app_widget_config">BakingAppWidgetConfigActivity</string>
    <string name="configure">Configure</string>

    <!-- welcome -->
    <string name="welcome_title">WELCOME TO BEY-BAKE!</string>
    <string name="welcome_description">Bey-Bake! is more then an app: it is your step by step baking assistant. \n
    Choose a recipe, watch the videos and read the simple instructions to bake the perfect cake.\n Bei-Bake!: baking has never been so easy!</string>

    <!--Widget and widget configuration activity -->
    <string name="config_activity_intro">Choose a recipe to add the ingredients to the widget</string>
    <string name="prefs_name">com.example.aleperf.bakingapp.widget.BakingAppWidget</string>
    <string name="widget_no_data">No data to display yet</string>
    <string name="prefs_prefix">appwidget_</string>
    <string name="prefs_recipe_prefix">recipe_name_</string>
    <string name="widget_ingredients_title">%s Ingredients</string>
    <string name="intro_empty_view_message">Uh Oh! No recipes!\n Check for a better connection and
    tap to reload the recipes</string>

    <!-- Test Strings -->
    <string name="nutella_pie_test_name">Nutella Pie</string>
    <string name="ingredients_back">button for closing list of ingredients</string>
    <!-- content descriptions -->
    <string name="ingredients_icon">notebook and pen</string>
    <string name="cake_image">recipe cake or placeholder</string>
    <string name="arrow_left">arrow back</string>
    <string name="arrow_right">arrow next</string>
    <string name="video_logo">video logo used as placeholder</string>
    <string name="wi_fi">wi-fi symbol</string>

    <string name="error_loading">Error in loading recipes</string>
    <string name="test_string_step">STEP 1</string>
    <string name="test_string_step_counter">STEP 1 OF 6</string>


</resources>
