<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ingredientsColorBackground"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/ingredients_back"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_clear" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_dialog_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/ingredientsColorBackground"
        android:paddingBottom="16dp" />
</LinearLayout>
