<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/toolbarTitle" />
    </android.support.design.widget.AppBarLayout>

    <fragment
        android:id="@+id/master_steps"
        android:name="com.example.aleperf.bakingapp.ui.recipeDetail.RecipeSummaryFragment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>